A working version with minimal rust support.
It generates the structures necessary to read an existing
flatbuffer. Builders and verifiers don't yet exist.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(FlatBuffers_Compiler_SRCS
   include/flatbuffers/util.h
   src/idl_parser.cpp
   src/idl_gen_cpp.cpp
+  src/idl_gen_rs.cpp
   src/idl_gen_general.cpp
   src/idl_gen_go.cpp
   src/idl_gen_text.cpp
